--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   },
   "author": "ShuttleProtocol",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@crustio/crust-cli": "^1.0.2",
+    "@crustio/type-definitions": "^1.3.0",
+    "@polkadot/api": "^8.11.2",
+    "ethers": "^5.6.9",
     "express": "^4.18.1",
     "ipfs-http-client": "^57.0.3",
+    "polkadot": "^1.0.0",
     "request": "^2.88.2"
   }
 }
