--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "crustapi",
+  "name": "store-file-with-ipfs",
   "version": "1.0.0",
-  "description": "a microservice to put/get file to/from crust network",
-  "main": "main.js",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "nodemon src/index.ts",
+    "start": "node build/src/index.js",
+    "build": "tsc -p ./"
   },
-  "author": "ShuttleProtocol",
-  "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "@crustio/crust-cli": "^1.0.2",
     "@crustio/type-definitions": "^1.3.0",
-    "@polkadot/api": "^8.11.2",
-    "ethers": "^5.6.9",
+    "@polkadot/api": "4.2.2-4",
+    "@types/express": "^4.17.13",
+    "ethers": "^5.5.1",
     "express": "^4.18.1",
-    "ipfs-http-client": "^57.0.3",
-    "polkadot": "^1.0.0",
-    "request": "^2.88.2"
+    "ipfs-http-client": "^54.0.2",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5",
+    "winston": "^3.3.3"
   }
 }
